--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Client.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Client.form
@@ -367,6 +367,9 @@
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txCpfKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
