Continuação dos stored procedures

--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Consulta.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/Consulta.form
@@ -152,11 +152,28 @@
                                               </Group>
                                               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
                                                   <Group type="102" alignment="1" attributes="0">
-                                                      <Group type="103" groupAlignment="0" attributes="0">
-                                                          <Component id="txCodigoFabrica" alignment="0" max="32767" attributes="0"/>
-                                                          <Component id="txGaveta" max="32767" attributes="0"/>
+                                                      <Group type="103" groupAlignment="1" attributes="0">
                                                           <Group type="102" attributes="0">
+                                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                                  <Component id="jLabel16" max="32767" attributes="0"/>
+                                                                  <Component id="txCodigoCategoria" pref="0" max="32767" attributes="0"/>
+                                                              </Group>
+                                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                                  <Group type="102" attributes="0">
+                                                                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                                                                      <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
+                                                                  </Group>
+                                                                  <Group type="102" alignment="1" attributes="0">
+                                                                      <EmptySpace max="32767" attributes="0"/>
+                                                                      <Component id="txNomeCategoria" min="-2" pref="243" max="-2" attributes="0"/>
+                                                                  </Group>
+                                                              </Group>
+                                                          </Group>
+                                                          <Component id="txCodigoFabrica" alignment="0" max="32767" attributes="0"/>
+                                                          <Component id="txGaveta" alignment="0" max="32767" attributes="0"/>
+                                                          <Group type="102" alignment="0" attributes="0">
                                                               <Group type="103" groupAlignment="0" attributes="0">
                                                                   <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                                                                   <Group type="102" alignment="0" attributes="0">
@@ -180,21 +197,6 @@
                                                           <Component id="txObservacoes" min="-2" pref="492" max="-2" attributes="0"/>
                                                       </Group>
                                                       <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
-                                                  <Group type="102" attributes="0">
-                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                          <Component id="jLabel16" max="32767" attributes="0"/>
-                                                          <Component id="txCodigoCategoria" pref="0" max="32767" attributes="0"/>
-                                                      </Group>
-                                                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                                                      <Group type="103" groupAlignment="0" attributes="0">
-                                                          <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
-                                                          <Group type="102" attributes="0">
-                                                              <Component id="txNomeCategoria" max="32767" attributes="0"/>
-                                                              <EmptySpace min="-2" pref="549" max="-2" attributes="0"/>
-                                                          </Group>
-                                                      </Group>
                                                   </Group>
                                               </Group>
                                           </Group>
