--- a/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/GestaoVendas.form
+++ b/AutoStockCar/src/main/java/com/mycompany/autostockcar/view/formulario/GestaoVendas.form
@@ -126,7 +126,7 @@
                                   <EmptySpace min="-2" pref="346" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" attributes="0">
-                                          <Component id="jFormattedTextField1" min="-2" pref="100" max="-2" attributes="0"/>
+                                          <Component id="jFDate" min="-2" pref="100" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="btnFiltrarData" min="-2" pref="78" max="-2" attributes="0"/>
                                       </Group>
@@ -153,7 +153,7 @@
                               <Component id="btnFiltrarNome" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="txIdCliente" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="btnFiltrarData" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="jFormattedTextField1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="jFDate" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="373" max="-2" attributes="0"/>
@@ -318,7 +318,7 @@
                     <Property name="text" type="java.lang.String" value="Data:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JFormattedTextField" name="jFormattedTextField1">
+                <Component class="javax.swing.JFormattedTextField" name="jFDate">
                   <Properties>
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
                       <Format format="####/##/##" subtype="-1" type="5"/>
